src/objects/caesars_gst_table_rating_dtl_temp__x.object
<CustomObject>
    <description>caesars$gst_table_rating_dtl_temp</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>caesars$gst_table_rating_dtl_temp</externalName>
    <fields>
        <fullName>c_company__c</fullName>
        <description>c_company</description>
        <externalDeveloperName>c_company</externalDeveloperName>
        <label>c_company</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c_entered_by__c</fullName>
        <description>c_entered_by</description>
        <externalDeveloperName>c_entered_by</externalDeveloperName>
        <label>c_entered_by</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_game_speed__c</fullName>
        <description>c_game_speed</description>
        <externalDeveloperName>c_game_speed</externalDeveloperName>
        <label>c_game_speed</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pit_num__c</fullName>
        <description>c_pit_num</description>
        <externalDeveloperName>c_pit_num</externalDeveloperName>
        <label>c_pit_num</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_game_cd__c</fullName>
        <description>c_prop_game_cd</description>
        <externalDeveloperName>c_prop_game_cd</externalDeveloperName>
        <label>c_prop_game_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rate_type__c</fullName>
        <description>c_rate_type</description>
        <externalDeveloperName>c_rate_type</externalDeveloperName>
        <label>c_rate_type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rated_by__c</fullName>
        <description>c_rated_by</description>
        <externalDeveloperName>c_rated_by</externalDeveloperName>
        <label>c_rated_by</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_shift__c</fullName>
        <description>c_shift</description>
        <externalDeveloperName>c_shift</externalDeveloperName>
        <label>c_shift</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_table_num__c</fullName>
        <description>c_table_num</description>
        <externalDeveloperName>c_table_num</externalDeveloperName>
        <label>c_table_num</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <description>contact</description>
        <externalDeveloperName>contact</externalDeveloperName>
        <label>contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_rating_date__c</fullName>
        <description>d_rating_date</description>
        <externalDeveloperName>d_rating_date</externalDeveloperName>
        <label>d_rating_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>d_trans_date__c</fullName>
        <description>d_trans_date</description>
        <externalDeveloperName>d_trans_date</externalDeveloperName>
        <label>d_trans_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>f_avg_bet_1__c</fullName>
        <description>f_avg_bet_1</description>
        <externalDeveloperName>f_avg_bet_1</externalDeveloperName>
        <label>f_avg_bet_1</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_avg_bet_2__c</fullName>
        <description>f_avg_bet_2</description>
        <externalDeveloperName>f_avg_bet_2</externalDeveloperName>
        <label>f_avg_bet_2</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_avg_bet_3__c</fullName>
        <description>f_avg_bet_3</description>
        <externalDeveloperName>f_avg_bet_3</externalDeveloperName>
        <label>f_avg_bet_3</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_buy_in__c</fullName>
        <description>f_buy_in</description>
        <externalDeveloperName>f_buy_in</externalDeveloperName>
        <label>f_buy_in</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash__c</fullName>
        <description>f_cash</description>
        <externalDeveloperName>f_cash</externalDeveloperName>
        <label>f_cash</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash_out__c</fullName>
        <description>f_cash_out</description>
        <externalDeveloperName>f_cash_out</externalDeveloperName>
        <label>f_cash_out</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_comp_worth__c</fullName>
        <description>f_comp_worth</description>
        <externalDeveloperName>f_comp_worth</externalDeveloperName>
        <label>f_comp_worth</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_countercheck__c</fullName>
        <description>f_countercheck</description>
        <externalDeveloperName>f_countercheck</externalDeveloperName>
        <label>f_countercheck</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_handle__c</fullName>
        <description>f_handle</description>
        <externalDeveloperName>f_handle</externalDeveloperName>
        <label>f_handle</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_hands_played__c</fullName>
        <description>f_hands_played</description>
        <externalDeveloperName>f_hands_played</externalDeveloperName>
        <label>f_hands_played</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_win__c</fullName>
        <description>f_theo_win</description>
        <externalDeveloperName>f_theo_win</externalDeveloperName>
        <label>f_theo_win</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cms_dmid__c</fullName>
        <description>i_cms_dmid</description>
        <externalDeveloperName>i_cms_dmid</externalDeveloperName>
        <label>i_cms_dmid</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_countercheck_cnt__c</fullName>
        <description>i_countercheck_cnt</description>
        <externalDeveloperName>i_countercheck_cnt</externalDeveloperName>
        <label>i_countercheck_cnt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_minutes_played__c</fullName>
        <description>i_minutes_played</description>
        <externalDeveloperName>i_minutes_played</externalDeveloperName>
        <label>i_minutes_played</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rating_hyd__c</fullName>
        <description>i_rating_hyd</description>
        <externalDeveloperName>i_rating_hyd</externalDeveloperName>
        <label>i_rating_hyd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rating_num__c</fullName>
        <description>i_rating_num</description>
        <externalDeveloperName>i_rating_num</externalDeveloperName>
        <label>i_rating_num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trans_hyd__c</fullName>
        <description>i_trans_hyd</description>
        <externalDeveloperName>i_trans_hyd</externalDeveloperName>
        <label>i_trans_hyd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>caesars$gst_table_rating_dtl_temp</label>
    <pluralLabel>caesars$gst_table_rating_dtl_temp</pluralLabel>
</CustomObject>